expected/main/gens/primIxMaxBound-neg.err
ERROR: "actual/main/gens/primIxMaxBound-neg.lc", line 3
external max0  {primIxMaxBound 0}  :: Ix 0
         ^
No generated implementation: Argument value 0 is too small; must be at least 1

ERROR: "actual/main/gens/primIxMaxBound-neg.lc", line 4
external max2G {primIxMaxBound 2G} :: Ix 2G
         ^
No generated implementation: Argument value 2147483648 is too large; must be at most 2147483647

ERROR: Aborting after 2 previously reported errors

